Assets/Styles/site.css
#btnTop {
    display: none;
    position: fixed;
    top: 1%;
    right: 1%;
    z-index: 99;
    border: none;
    outline: none;
    background-color: rgb(129, 190, 65);
    color: white;
    cursor: pointer;
    padding: 5px;
    border-radius: 10px;
    font-size: 14px;
    font-weight: bold;
    min-width: 50px;
    min-height: 45px;
    height: 5%;
    width: 5%;
}

#btnTop:hover {
  background-color: rgb(0, 56, 48);
}

 #sparkitectureNav{
    position: fixed;
    background-color: white;    
    top: 60px;
    left: 5px;       
    z-index: 9;    
    top: 0;
} 

.logo {
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 1%;
    padding-left: -1%;
    width: 50%;
  }

.logoWrapper{
    width: 100%;
}

.githubBottom {    
    position: fixed;
    bottom: 0px;
    right: 0px;
    z-index: 99;
    border: none;
    outline: none;
    cursor: pointer;
    width: 12%;
}

.nav-link{
    padding: 0 !important;
}

.indicator{
    display: table;
    vertical-align: top;
}

@media (min-width: 0px) and (max-width: 1800px) { 
    
    #sparkitectureNav{
        display: none;
    } 

    #btnTop{
        display: block;
    }

    .logo {
        width: 65%;
      }
 }

